# Barracuda-Compiler

./: .cz.toml  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  test.bc
common/: Cargo.toml
common/src/: lib.rs
common/src/cli_utility/: cli_env_var_descriptor.rs  mod.rs
common/src/parser/: bct_parser.rs  mod.rs
common/src/program_code/: instructions.rs  mod.rs  ops.rs
compiler/: .gitignore  Cargo.toml  build.sh
compiler/examples/barracuda/: env_vars.bc
compiler/examples/c_lib/: main.c  makefile
compiler/src/: barracuda.pest  lib.rs  main.rs
compiler/src/compiler/: mod.rs  utils.rs
compiler/src/compiler/ast/: ast_node.rs  datatype.rs  environment_symbol_context.rs  literals.rs  mod.rs  operators.rs  qualifiers.rs  scope_tracker.rs  symbol_table.rs
compiler/src/compiler/backend/: barracuda_bytecode_generator.rs  builtin_functions.rs  mod.rs  program_code_builder.rs
compiler/src/compiler/backend/analysis/: mod.rs  stack_estimator.rs
compiler/src/compiler/parser/: barracuda_pest_parser.rs  mod.rs
compiler/src/compiler/semantic_analyser/: barracuda_pest_semantic_analyser.rs  function_tracker.rs  mod.rs  scope_tracker.rs
examples/: fib.txt  rule110.txt
examples/barracuda/: divisibility.bc  env_vars.bc  simple.bc  test_fn.bc
examples/c_lib/: .gitignore  c_lib_test  main.c  makefile
src/: barracuda.pest  lib.rs  main.rs
src/compiler/: mod.rs
src/compiler/ast/: ast_node.rs  datatype.rs  environment_symbol_context.rs  literals.rs  mod.rs  operators.rs  scope.rs  scope_tracker.rs  symbol_table.rs
src/compiler/backend/: barracuda_bytecode_generator.rs  mod.rs  program_code_builder.rs
src/compiler/backend/analysis/: stack_estimator.rs
src/compiler/backend/barracuda_def/: mod.rs  scope.rs  symbols.rs
src/compiler/parser/: barracuda_pest_parser.rs  mod.rs
src/compiler/program_code/: instructions.rs  mod.rs  ops.rs
src/emulator/: emulator_heap.rs  instructions.rs  mod.rs  ops.rs
src/emulator/test/: emulator_heap_unit_test.rs  emulator_unit_test.rs  mod.rs
src/parser/: mod.rs  text_parser.rs
src/parser/test/: mod.rs  unit_text_parser.rs
src/test/: emulator_test.rs  mod.rs
src/visualiser/: env_vars_window.rs  heap_viewer.rs  instructions_window.rs  mod.rs  program_output_window.rs  scrollable_list.rs  stack_window.rs
vm_emulator/: Cargo.toml  README.md
vm_emulator/examples/: compile_test.bct  context_sensitive_example.bct  stackio.txt  test.bct
vm_emulator/src/: main.rs
vm_emulator/src/emulator/: emulator_heap.rs  instruction_executor.rs  instructions.rs  mod.rs  operation_executor.rs
vm_emulator/src/emulator/test/: emulator_unit_test.rs  mod.rs
vm_emulator/src/test/: emulator_test.rs  mod.rs
vm_emulator/src/visualiser/: env_vars_window.rs  event_widget.rs  instructions_window.rs  mod.rs  program_output_window.rs
