[package]
name = "mathstack_cpu_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
num_enum = "0.5.7"
statrs = "0.15.0"
libm = "0.2.2"
float_next_after = "0.1.5"
scilib = "0.4.1"
approx = "0.5.1"
tui = "0.17.0"
crossterm = "0.22"
num-traits = "0.2"
num-derive = "0.2"
derive-getters = "0.2.0"
endiannezz = "0.6.5"
strum = "0.24"
strum_macros = "0.24"