[package]
name = "barracuda_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "barracuda_compiler"
crate-type = ["cdylib"]     # Generate a Dynamic Lib


[dependencies]
pest = "2.1.3"
pest_derive = '2.1.0'